Fixes display of member benefits boxes on mobile.

--- a/wp-content/themes/cmp/assets/styles/pages/_member-perks.scss
+++ b/wp-content/themes/cmp/assets/styles/pages/_member-perks.scss
@@ -37,6 +37,7 @@
 
   .sub-page__image {
     height: 100%;
+    width: 100%;
     object-fit: cover;
   }
 
